docs/1.28/flowcontrol/v1beta3/priorityLevelConfigurationSpec.md
---
permalink: /1.28/flowcontrol/v1beta3/priorityLevelConfigurationSpec/
---

# flowcontrol.v1beta3.priorityLevelConfigurationSpec

"PriorityLevelConfigurationSpec specifies the configuration of a priority level."

## Index

* [`fn withType(type)`](#fn-withtype)
* [`obj exempt`](#obj-exempt)
  * [`fn withLendablePercent(lendablePercent)`](#fn-exemptwithlendablepercent)
  * [`fn withNominalConcurrencyShares(nominalConcurrencyShares)`](#fn-exemptwithnominalconcurrencyshares)
* [`obj limited`](#obj-limited)
  * [`fn withBorrowingLimitPercent(borrowingLimitPercent)`](#fn-limitedwithborrowinglimitpercent)
  * [`fn withLendablePercent(lendablePercent)`](#fn-limitedwithlendablepercent)
  * [`fn withNominalConcurrencyShares(nominalConcurrencyShares)`](#fn-limitedwithnominalconcurrencyshares)
  * [`obj limited.limitResponse`](#obj-limitedlimitresponse)
    * [`fn withType(type)`](#fn-limitedlimitresponsewithtype)
    * [`obj limited.limitResponse.queuing`](#obj-limitedlimitresponsequeuing)
      * [`fn withHandSize(handSize)`](#fn-limitedlimitresponsequeuingwithhandsize)
      * [`fn withQueueLengthLimit(queueLengthLimit)`](#fn-limitedlimitresponsequeuingwithqueuelengthlimit)
      * [`fn withQueues(queues)`](#fn-limitedlimitresponsequeuingwithqueues)

## Fields

### fn withType

```ts
withType(type)
```

"`type` indicates whether this priority level is subject to limitation on request execution.  A value of `\"Exempt\"` means that requests of this priority level are not subject to a limit (and thus are never queued) and do not detract from the capacity made available to other priority levels.  A value of `\"Limited\"` means that (a) requests of this priority level _are_ subject to limits and (b) some of the server's limited capacity is made available exclusively to this priority level. Required."

## obj exempt

"ExemptPriorityLevelConfiguration describes the configurable aspects of the handling of exempt requests. In the mandatory exempt configuration object the values in the fields here can be modified by authorized users, unlike the rest of the `spec`."

### fn exempt.withLendablePercent

```ts
withLendablePercent(lendablePercent)
```

"`lendablePercent` prescribes the fraction of the level's NominalCL that can be borrowed by other priority levels.  This value of this field must be between 0 and 100, inclusive, and it defaults to 0. The number of seats that other levels can borrow from this level, known as this level's LendableConcurrencyLimit (LendableCL), is defined as follows.\n\nLendableCL(i) = round( NominalCL(i) * lendablePercent(i)/100.0 )"

### fn exempt.withNominalConcurrencyShares

```ts
withNominalConcurrencyShares(nominalConcurrencyShares)
```

"`nominalConcurrencyShares` (NCS) contributes to the computation of the NominalConcurrencyLimit (NominalCL) of this level. This is the number of execution seats nominally reserved for this priority level. This DOES NOT limit the dispatching from this priority level but affects the other priority levels through the borrowing mechanism. The server's concurrency limit (ServerCL) is divided among all the priority levels in proportion to their NCS values:\n\nNominalCL(i)  = ceil( ServerCL * NCS(i) / sum_ncs ) sum_ncs = sum[priority level k] NCS(k)\n\nBigger numbers mean a larger nominal concurrency limit, at the expense of every other priority level. This field has a default value of zero."

## obj limited

"LimitedPriorityLevelConfiguration specifies how to handle requests that are subject to limits. It addresses two issues:\n  - How are requests for this priority level limited?\n  - What should be done with requests that exceed the limit?"

### fn limited.withBorrowingLimitPercent

```ts
withBorrowingLimitPercent(borrowingLimitPercent)
```

"`borrowingLimitPercent`, if present, configures a limit on how many seats this priority level can borrow from other priority levels. The limit is known as this level's BorrowingConcurrencyLimit (BorrowingCL) and is a limit on the total number of seats that this level may borrow at any one time. This field holds the ratio of that limit to the level's nominal concurrency limit. When this field is non-nil, it must hold a non-negative integer and the limit is calculated as follows.\n\nBorrowingCL(i) = round( NominalCL(i) * borrowingLimitPercent(i)/100.0 )\n\nThe value of this field can be more than 100, implying that this priority level can borrow a number of seats that is greater than its own nominal concurrency limit (NominalCL). When this field is left `nil`, the limit is effectively infinite."

### fn limited.withLendablePercent

```ts
withLendablePercent(lendablePercent)
```

"`lendablePercent` prescribes the fraction of the level's NominalCL that can be borrowed by other priority levels. The value of this field must be between 0 and 100, inclusive, and it defaults to 0. The number of seats that other levels can borrow from this level, known as this level's LendableConcurrencyLimit (LendableCL), is defined as follows.\n\nLendableCL(i) = round( NominalCL(i) * lendablePercent(i)/100.0 )"

### fn limited.withNominalConcurrencyShares

```ts
withNominalConcurrencyShares(nominalConcurrencyShares)
```

"`nominalConcurrencyShares` (NCS) contributes to the computation of the NominalConcurrencyLimit (NominalCL) of this level. This is the number of execution seats available at this priority level. This is used both for requests dispatched from this priority level as well as requests dispatched from other priority levels borrowing seats from this level. The server's concurrency limit (ServerCL) is divided among the Limited priority levels in proportion to their NCS values:\n\nNominalCL(i)  = ceil( ServerCL * NCS(i) / sum_ncs ) sum_ncs = sum[priority level k] NCS(k)\n\nBigger numbers mean a larger nominal concurrency limit, at the expense of every other priority level. This field has a default value of 30."

## obj limited.limitResponse

"LimitResponse defines how to handle requests that can not be executed right now."

### fn limited.limitResponse.withType

```ts
withType(type)
```

"`type` is \"Queue\" or \"Reject\". \"Queue\" means that requests that can not be executed upon arrival are held in a queue until they can be executed or a queuing limit is reached. \"Reject\" means that requests that can not be executed upon arrival are rejected. Required."

## obj limited.limitResponse.queuing

"QueuingConfiguration holds the configuration parameters for queuing"

### fn limited.limitResponse.queuing.withHandSize

```ts
withHandSize(handSize)
```

"`handSize` is a small positive number that configures the shuffle sharding of requests into queues.  When enqueuing a request at this priority level the request's flow identifier (a string pair) is hashed and the hash value is used to shuffle the list of queues and deal a hand of the size specified here.  The request is put into one of the shortest queues in that hand. `handSize` must be no larger than `queues`, and should be significantly smaller (so that a few heavy flows do not saturate most of the queues).  See the user-facing documentation for more extensive guidance on setting this field.  This field has a default value of 8."

### fn limited.limitResponse.queuing.withQueueLengthLimit

```ts
withQueueLengthLimit(queueLengthLimit)
```

"`queueLengthLimit` is the maximum number of requests allowed to be waiting in a given queue of this priority level at a time; excess requests are rejected.  This value must be positive.  If not specified, it will be defaulted to 50."

### fn limited.limitResponse.queuing.withQueues

```ts
withQueues(queues)
```

"`queues` is the number of queues for this priority level. The queues exist independently at each apiserver. The value must be positive.  Setting it to 1 effectively precludes shufflesharding and thus makes the distinguisher method of associated flow schemas irrelevant.  This field has a default value of 64."